--- a/Android/进程存活率探究.md
+++ b/Android/进程存活率探究.md
@@ -12,7 +12,8 @@
 
 
 - 从服务角度出发
-  - onStartCommand方法的返回值为START_STICKY
+
+  - 让onStartCommand方法的返回值为START_STICKY
 
     返回值为START_STICKY的话，如果service进程被kill掉，保留service的状态为开始状态，但不保留递送的 intent对象。随后系统 会尝试重新创建service，由于服务状态为开始状态，所以创建服务后一定会调用onStartCommand(Intent,int,int)方法。如果在此期间没有任何启动命令被传递到service，那么参数Intent将为null。
 
