--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -4,6 +4,7 @@
 - [你需要知道的Android拍照适配方案](#你需要知道的android拍照适配方案)
 - [Android快速读取联系人示例](#android快速读取联系人示例)
 - [Android搜索把软键盘上的回车键改为搜索](#android搜索把软键盘上的回车键改为搜索)
+- [Android快速实现微信支付](#android快速实现微信支付)
 
 
 
@@ -77,3 +78,6 @@ edtKeyword.setOnKeyListener(new View.OnKeyListener() {
             }
         });
 ```
+
+### Android快速实现微信支付
+[原文地址](http://www.jianshu.com/p/c97639279d2e)
