--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -5,6 +5,7 @@
 - [Android快速读取联系人示例](#android快速读取联系人示例)
 - [Android搜索把软键盘上的回车键改为搜索](#android搜索把软键盘上的回车键改为搜索)
 - [Android快速实现微信支付](#android快速实现微信支付)
+- [Andriod软键盘出现把原来的布局给顶上去的方法](#andriod软键盘出现把原来的布局给顶上去的方法)
 
 
 
@@ -81,3 +82,10 @@ edtKeyword.setOnKeyListener(new View.OnKeyListener() {
 
 ### Android快速实现微信支付
 http://www.jianshu.com/p/c97639279d2e
+
+### Andriod软键盘出现把原来的布局给顶上去的方法
+在AndroidManifest.xml中指定的activity节点中添加如下代码：
+
+```xml
+android:windowSoftInputMode="adjustPan|stateHidden"
+```
