--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -7,7 +7,7 @@
 - [Android快速实现微信支付](#android快速实现微信支付)
 - [Andriod软键盘出现把原来的布局给顶上去的方法](#andriod软键盘出现把原来的布局给顶上去的方法)
 - [Android启动页黑屏及最优解决方案](#android启动页黑屏及最优解决方案)
-- [Android启动页优化，去黑屏实现秒启动](#android启动页优化，去黑屏实现秒启动)
+- [Android启动页优化去黑屏实现秒启动](#android启动页优化去黑屏实现秒启动)
 
 
 
@@ -92,8 +92,8 @@ http://www.jianshu.com/p/c97639279d2e
 android:windowSoftInputMode="adjustPan|stateHidden"
 ```
 
-### Android 启动页黑屏及最优解决方案
+### Android启动页黑屏及最优解决方案
 https://gold.xitu.io/post/58ad90518ac2472a2ad9b684
 
-### Android启动页优化，去黑屏实现秒启动
+### Android启动页优化去黑屏实现秒启动
 http://www.jianshu.com/p/662274d5d637
