--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -6,8 +6,7 @@
 - [Android搜索把软键盘上的回车键改为搜索](#android搜索把软键盘上的回车键改为搜索)
 - [Android快速实现微信支付](#android快速实现微信支付)
 - [Andriod软键盘出现把原来的布局给顶上去的方法](#andriod软键盘出现把原来的布局给顶上去的方法)
-- [Android启动页黑屏及最优解决方案](#android启动页黑屏及最优解决方案)
-- [Android启动页优化去黑屏实现秒启动](#android启动页优化去黑屏实现秒启动)
+- [Android启动页优化](#android启动页优化)
 
 
 
@@ -92,8 +91,12 @@ http://www.jianshu.com/p/c97639279d2e
 android:windowSoftInputMode="adjustPan|stateHidden"
 ```
 
-### Android启动页黑屏及最优解决方案
-https://gold.xitu.io/post/58ad90518ac2472a2ad9b684
+### Android启动页优化
 
-### Android启动页优化去黑屏实现秒启动
-http://www.jianshu.com/p/662274d5d637
+[Android启动页黑屏及最优解决方案](https://gold.xitu.io/post/58ad90518ac2472a2ad9b684)
+
+[Android启动页优化去黑屏实现秒启动](http://www.jianshu.com/p/662274d5d637)
+
+[Android启动速度优化](http://iceanson.github.io/Android%E5%90%AF%E5%8A%A8%E9%80%9F%E5%BA%A6-%E6%80%BB%E4%BC%9A%E9%81%87%E5%88%B0%E7%9A%84%E4%B8%8D%E7%97%9B%E4%B8%8D%E7%97%92%E7%9A%84%E5%9D%8E)
+
+[Android冷启动实现APP秒开](http://www.jianshu.com/p/03c0fd3fc245)
