--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -6,6 +6,7 @@
 - [Android搜索把软键盘上的回车键改为搜索](#android搜索把软键盘上的回车键改为搜索)
 - [Android快速实现微信支付](#android快速实现微信支付)
 - [Andriod软键盘出现把原来的布局给顶上去的方法](#andriod软键盘出现把原来的布局给顶上去的方法)
+- [解决AndroidStudio下载gradle-3.3-all.zip便秘难题](#解决androidstudio下载gradle-3.3-all.zip便秘难题)
 
 
 
@@ -89,3 +90,14 @@ http://www.jianshu.com/p/c97639279d2e
 ```xml
 android:windowSoftInputMode="adjustPan|stateHidden"
 ```
+### 解决AndroidStudio下载gradle-3.3-all.zip便秘难题
+
+由于Android Studio2.3 默认使用的是gradle3.3,而导致项目无法流畅build。
+尝试人工下载gradle-wrapper.properties下的配置地址：
+[https://services.gradle.org/distributions/gradle-3.3-all.zip](https://services.gradle.org/distributions/gradle-3.3-all.zip)
+后，发现着果然是AS便秘了，随打开.gradle,清理所有文件夹以尝试重建，失败！
+突发奇想，将下载好的gradle-3.3-all.zip放到.gradle\wrapper\dists\gradle-3.3-all\55gk2rcmfc6p2dg9u9ohc3hw9\下，重启AS，顺利解决问题。
+
+.gradle目录在用户文件夹下。例如:c:\User\Admin.gradle
+
+[原文](https://ldmf.net/archives/26.html)
