--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -7,7 +7,7 @@
 - [Android快速实现微信支付](#android快速实现微信支付)
 - [Andriod软键盘出现把原来的布局给顶上去的方法](#andriod软键盘出现把原来的布局给顶上去的方法)
 - [Android启动页优化](#android启动页优化)
-- [解决AndroidStudio下载gradle-3.3-all.zip便秘难题](#解决androidstudio下载gradle-3.3-all.zip便秘难题)
+- [解决AndroidStudio下载gradle便秘难题](#解决androidstudio下载gradle便秘难题)
 
 
 ### Frgment重叠解决方案
@@ -102,7 +102,7 @@ android:windowSoftInputMode="adjustPan|stateHidden"
 
 http://www.jianshu.com/p/03c0fd3fc245
 
-### 解决AndroidStudio下载gradle-3.3-all.zip便秘难题
+### 解决AndroidStudio下载gradle便秘难题
 
 由于Android Studio2.3 默认使用的是gradle3.3,而导致项目无法流畅build。
 尝试人工下载gradle-wrapper.properties下的配置地址：
