--- a/Android/内存优化集.md
+++ b/Android/内存优化集.md
@@ -1,3 +1,3 @@
 ## 目录
-- [如何避免Context内存泄露](https://github.com/zhich/Note/blob/master/Android/内存优化集/如何避免Context内存泄露.md)
+- [如何避免Activity类Context内存泄露](https://github.com/zhich/Note/blob/master/Android/内存优化集/如何避免Activity类Context内存泄露.md)
 
