--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -8,6 +8,7 @@
 - [Andriod软键盘出现把原来的布局给顶上去的方法](#andriod软键盘出现把原来的布局给顶上去的方法)
 - [Android启动页优化](#android启动页优化)
 - [解决AndroidStudio下载gradle便秘难题](#解决androidstudio下载gradle便秘难题)
+- [AppTheme改变导致Button变大问题解决](#apptheme改变导致button变大问题解决)
 
 
 ### Frgment重叠解决方案
@@ -113,4 +114,13 @@ http://www.jianshu.com/p/03c0fd3fc245
 .gradle目录在用户文件夹下。例如:c:\User\Admin.gradle
 
 [原文](https://ldmf.net/archives/26.html)
+
+### AppTheme改变导致Button变大问题解决
+
+AppTheme由android:Theme.Light改为Theme.AppCompat.Light.NoActionBar后，会导致应用中的Button变大，解决方法在你的AppTheme里面加上下面这句话解决：
+
+```xml
+ <item name="android:buttonStyle">@android:style/Widget.Button.Small</item>
+```
+
 
