--- a/Android/第三方框架基本使用.md
+++ b/Android/第三方框架基本使用.md
@@ -1,6 +1,7 @@
 ## 目录
 
 - [RxBus](#rxbus)
+- [butterknife](#butterknife)
 
 
 
@@ -55,3 +56,27 @@ public class TestActivity extends Activity {
 ```
 
 > 在 Fragment 中也是一样的使用，需在 onCreate 注册，在 onDestroy 注销注册。
+
+### butterknife
+
+- AndroidStudio添加butterknife依赖
+
+一、在使用butterknife的Module的gradle最上面添加
+
+```groovy
+apply plugin: 'android-apt'
+```
+
+然后在dependencies领域添加butterknife依赖的版本
+
+```groovy
+ compile 'com.jakewharton:butterknife:8.2.1'
+ apt 'com.jakewharton:butterknife-compiler:8.2.1'
+```
+
+二、在Project的gradle里面的buildscript领域中的dependencies领域添加
+
+```groovy
+classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+```
+经过以上步骤即可使用butterknife。
