--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -1,7 +1,7 @@
 ## 目录
 - [Frgment重叠解决方案](#frgment重叠解决方案)
 - [解决CheckBox的button和文字在不同Android版本间距不一致的问题](#解决checkbox的button和文字在不同android版本间距不一致的问题)
-- [你需要知道的Android拍照适配方案](#你需要知道的android拍照适配方案)
+- [Android拍照适配](#android拍照适配)
 - [Android快速读取联系人示例](#android快速读取联系人示例)
 - [Android搜索把软键盘上的回车键改为搜索](#android搜索把软键盘上的回车键改为搜索)
 - [Android快速实现微信支付](#android快速实现微信支付)
@@ -50,8 +50,14 @@ Checkbox设置完button属性后，文本和button之前在2.3以下没有paddin
 
 [原文地址](http://www.jianshu.com/p/0f464a2722de)
 
-###  你需要知道的Android拍照适配方案
-http://www.jcodecraeer.com/a/anzhuokaifa/androidkaifa/2016/0602/4323.html
+### Android拍照适配
+[你需要知道的Android拍照适配方案](http://www.jcodecraeer.com/a/anzhuokaifa/androidkaifa/2016/0602/4323.html)
+
+[Android7.0相机拍照功能FileUriExposedException导致的问题](https://zhuanlan.zhihu.com/p/24485823)
+
+[Android 7.0及其以上拍照出错 - FileUriExposedException](http://www.woodonchan.com/2017/01/11/Android-001/)
+
+[Android7.0拍照失败FileUriExposedException,你的拍照代码升级了吗](http://www.jianshu.com/p/a1eb3ad79ef6)
 
 ### Android快速读取联系人示例
 http://www.apkbus.com/android-95266-1-1.html
