--- a/Android/第三方框架基本使用.md
+++ b/Android/第三方框架基本使用.md
@@ -61,7 +61,7 @@ public class TestActivity extends Activity {
 
 - AndroidStudio添加butterknife依赖
 
-一、在使用butterknife的Module的gradle最上面添加
+1、在使用butterknife的Module的gradle最上面添加
 
 ```groovy
 apply plugin: 'android-apt'
@@ -74,7 +74,7 @@ apply plugin: 'android-apt'
  apt 'com.jakewharton:butterknife-compiler:8.2.1'
 ```
 
-二、在Project的gradle里面的buildscript领域中的dependencies领域添加
+2、在Project的gradle里面的buildscript领域中的dependencies领域添加
 
 ```groovy
 classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
