--- a/Android/其它.md
+++ b/Android/其它.md
@@ -1,3 +1,4 @@
 - [移动前端开发之viewport的深入理解](http://www.cnblogs.com/2050/p/3877280.html)
+- [关于Android的strings.xml你应该了解的几个原则](http://www.jcodecraeer.com/a/anzhuokaifa/androidkaifa/2017/0303/7179.html)
 
   ​
