--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -11,6 +11,7 @@
 - [AppTheme改变导致Button变大问题解决](#apptheme改变导致button变大问题解决)
 - [Activity底部弹出的dialog被输入法遮蔽](#activity底部弹出的dialog被输入法遮蔽)
 - [AndroidStudio升级到3遇到的问题](#androidstudio升级到3遇到的问题)
+- [ScrollView边缘出现白边](#scrollview边缘出现白边)
 
 
 ### Frgment重叠解决方案
@@ -168,3 +169,11 @@ flavorDimensions "versionCode"
 
 [答案](http://blog.csdn.net/pjingying/article/details/71975805)
 
+### ScrollView边缘出现白边
+
+**解决ScrollView边缘出现缝隙，白边：**
+
+```Java  
+scrollView.setFadingEdgeLength(0);  
+sv.setOverScrollMode(OVER_SCROLL_NEVER);
+```
