--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -175,5 +175,5 @@ flavorDimensions "versionCode"
 
 ```Java  
 scrollView.setFadingEdgeLength(0);  
-sv.setOverScrollMode(OVER_SCROLL_NEVER);
+scrollView.setOverScrollMode(OVER_SCROLL_NEVER);
 ```
