--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -12,6 +12,7 @@
 - [Activity底部弹出的dialog被输入法遮蔽](#activity底部弹出的dialog被输入法遮蔽)
 - [AndroidStudio升级到3遇到的问题](#androidstudio升级到3遇到的问题)
 - [ScrollView边缘出现白边](#scrollview边缘出现白边)
+- [兼容Android7.0以上版本安装apk](#兼容android7.0以上版本安装apk)
 
 
 ### Frgment重叠解决方案
@@ -176,4 +177,75 @@ flavorDimensions "versionCode"
 ```Java  
 scrollView.setFadingEdgeLength(0);  
 scrollView.setOverScrollMode(OVER_SCROLL_NEVER);
+```
+
+### 兼容Android 7 . 0 以上版本安装apk
+
+**java文件**
+
+```Java
+/**
+ * 安装apk文件
+ *
+ * @param context
+ */
+private void installApk(Context context) {
+        File apkFile = new File(mApkLocalPath);
+        if (!apkFile.exists()) {
+            return;
+        }
+
+        Intent intent = new Intent(Intent.ACTION_VIEW);
+        Uri apkUri = null;
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.N) {//版本是否在7.0以上
+            apkUri = FileProvider.getUriForFile(context, context.getPackageName() + ".fileprovider", apkFile);//在AndroidManifest中的android:authorities值
+            intent.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION);//添加这一句表示对目标应用临时授权该Uri所代表的文件
+        } else {
+            apkUri = Uri.fromFile(apkFile);
+        }
+        intent.setDataAndType(apkUri, "application/vnd.android.package-archive");
+        intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        context.startActivity(intent);
+}
+```
+
+**AndroidManifest.xml**
+
+```xml
+<application>
+
+....
+
+  <provider
+      android:name="android.support.v4.content.FileProvider"
+      android:authorities="com.yueya.htshops.fileprovider"
+      android:exported="false"
+      android:grantUriPermissions="true">
+      <meta-data
+          tools:replace="android:resource"
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/myfile_paths" />
+  </provider>
+</application>
+```
+
+**myfile_paths.xml**
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <external-path
+        name="files_root"
+        path="Android/data/${applicationId}/" />
+
+    <root-path
+        name="root"
+        path="/" />
+
+    <!--第三方拍照 lib 中，被 tools:replace 属性排除掉的在此添加-->
+    <root-path
+        name="camera_photos"
+        path="" />
+</paths>
 ```
