--- a/Android/项目开发中笔记.md
+++ b/Android/项目开发中笔记.md
@@ -12,7 +12,7 @@
 - [Activity底部弹出的dialog被输入法遮蔽](#activity底部弹出的dialog被输入法遮蔽)
 - [AndroidStudio升级到3遇到的问题](#androidstudio升级到3遇到的问题)
 - [ScrollView边缘出现白边](#scrollview边缘出现白边)
-- [兼容Android7.0以上版本安装apk](#兼容android7.0以上版本安装apk)
+- [兼容Android7.0以上版本安装apk](#兼容android7-0以上版本安装apk)
 
 
 ### Frgment重叠解决方案
